--- a/index.html
+++ b/index.html
@@ -4,8 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A tutorial on Branching & Merging</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap');
+    </style>
+    <style>
+        body {
+            background-color: midnightblue;
+            font-family: 'Source Code Pro', monospace;
+            color: chartreuse;
+        }
+    </style>
 </head>
 <body>
+ <!-- 
+ Checkout to your 'add-css' branch, add CSS style, and commit changes
+ Merge the add-css branch back into the master branch -->
 
     <p>A branch marks a point where the files in the repository diverged. Branches are a way to maintain alternate histories of a project you're working on. "git init" initializes a default branch called "master". </p>
 
